<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/app_spacing"
    tools:context="com.kalpesh.kpageindicatordemo.MainActivity">

    <com.kalpesh.kpageindicatorlibrary.KPageIndicator
        android:id="@+id/pageIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_spacing"
        android:layout_marginBottom="@dimen/app_spacing"
        app:current_page="0"
        app:page_count="5"
        app:spacing_between_indicators="10dp"
        app:vertical_indicator_spacing="2dp" />

    <TextView
        android:id="@+id/pageCountLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_count" />

    <EditText
        android:id="@+id/pageCountFld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_of_pages"
        android:inputType="numberSigned"
        android:text="5"
        tools:ignore="Autofill,HardcodedText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_spacing"
        android:onClick="setPageCount"
        android:text="@string/set_page_count" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_spacing"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/app_spacing"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animation_type" />

            <RadioGroup
                android:id="@+id/animationGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/animNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/anim_none" />

                <RadioButton
                    android:id="@+id/animLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anim_linear" />

                <RadioButton
                    android:id="@+id/animEnlarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anim_enlarge" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style" />

            <RadioGroup
                android:id="@+id/styleGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/styleDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/style_default" />

                <RadioButton
                    android:id="@+id/styleEnlarged"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_enlarged" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="previous"
            android:text="@string/previous"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="next"
            android:text="@string/next"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>